Corrected tasks in header

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>It-incubator precourse</title>
 </head>
 <body data-cy="hw2-body">
-    <header data-cy="hw2-header" class="header">
+    <header data-cy="hw2-header" class="header span">
         <span data-cy="hw2-header-span">IT-INCUBATOR</span>
     </header>
 
